--- a/src/app/public-documents/components/circle-custom/circle-custom.component.html
+++ b/src/app/public-documents/components/circle-custom/circle-custom.component.html
@@ -6,7 +6,7 @@
     'margin-left': data.pos.x + 'px',
     'margin-top': data.pos.y + 'px',
     position: data.position.position,
-    left: data.position.left + '%',
+    left: data.position.left + 'px',
     top: data.position.top + 'px'
   }"
 >
@@ -24,8 +24,7 @@
           <p
             class="title"
             [ngStyle]="{
-              'font-size': data.size.font + 'px',
-              'width' : '90%'
+              'font-size': data.size.font + 'px'
             }"
           >
             {{ data.title }}
