--- a/src/app/public-documents/components/panel-circles/panel-circles.component.html
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.html
@@ -1,10 +1,11 @@
 <div class="main-box">
   <div class="main shadow">
-    <div *ngFor="let item of categories" style="display: inline-block">
+    <div class="align" *ngFor="let item of categories">
       <circle-custom
         [data]="item"
         [size]="item.size"
         [position]="item.position"
+        [categoryLength]="categoryLength"
         (click)="redirect(item.id)"
       ></circle-custom>
     </div>
