--- a/src/app/public-documents/components/panel-circles/panel-circles.component.scss
+++ b/src/app/public-documents/components/panel-circles/panel-circles.component.scss
@@ -5,16 +5,27 @@
   
   .main {
     height: 400px;
-    width: 2000px;
+    min-width: 2200px;
     // width: 100%;
-    display: block;
+    display: flex;
     background-image: radial-gradient(#212121 5%, transparent 5%);
     background-position: 0 0, 20px 20px;
     background-size: 30px 30px;
     border-radius: 5px 5px 0px 0px;
-    padding: 40px;
     background-color: white;
-  }
+    align-items: center;
+
+    .align{
+      height: 100%;
+    }
+    circle-custom{
+        display: block;
+        margin: 0px;
+      }
+
+      
+    }
+
 }
 
 *::-webkit-scrollbar {
