feat: images documentos , categoria , subcategoria , soluciones , problemas

--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -22,9 +22,9 @@
       <mat-card class="doc-description">
         <div class="imghldr">
           <img
-            src="../../../assets/images/stand.png"
+          class="imageSubcategory"
+            [src]="image"
             alt=""
-            style="width: 100%"
           />
         </div>
         <div class="infohldr">
