--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -7,10 +7,9 @@
     <div class="set-4 col-rgt-3">
       <mat-card class="doc-description">
         <div class="imghldr">
-          <img
-            src="../../../assets/images/books.png"
+          <img class="imgCategory"
+            [src]="image"
             alt=""
-            style="width: 100%"
           />
         </div>
         <div class="infohldr">
