--- a/src/app/public-documents/public/public.component.html
+++ b/src/app/public-documents/public/public.component.html
@@ -4,9 +4,9 @@
       <mat-card class="doc-description">
         <div class="imghldr">
           <img
-            src="../../../assets/images/Rectangle 531.png"
+          class="imageDocument"
+            [src]="image"
             alt=""
-            style="width: 100%"
           />
         </div>
         <div class="infohldr">
