--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -49,9 +49,9 @@
         <mat-card>
           <!-- IMAGE -->
           <div class="image-box">
-            <img
-              src="https://images.pexels.com/photos/1117452/pexels-photo-1117452.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="doc-image"
+            <img class="imgSolutions"
+              [src]="image"
+              alt=""
             />
 
             <div class="info">
