--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -60,11 +60,10 @@
         <mat-card>
           <!-- IMAGE -->
           <div class="image-box">
-            <img
-              src="https://images.pexels.com/photos/1117452/pexels-photo-1117452.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="doc-image"
-            />
-
+            <img class="imgTopic"
+            [src]="image"
+            alt=""
+          />
             <div class="info">
               <button class="custom-circle">
                 <mat-icon>thumb_up</mat-icon>
