--- a/src/app/public-documents/public/public.component.scss
+++ b/src/app/public-documents/public/public.component.scss
@@ -59,6 +59,13 @@
       cursor: pointer;
     }
   }
+}
 
-
+.loading {
+  mat-spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
