--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -1,9 +1,21 @@
-<div class="set-12" style="padding-bottom: 100px">
-  <div class="container" *ngIf="selectedCategory">
+<div class="set-12 loading" *ngIf="!isDataAvailable">
+  <mat-spinner></mat-spinner>
+</div>
+<div class="set-12">
+  <div class="container" *ngIf="isDataAvailable">
     <breadcrumbs-component>
       <li class="breadcrumb-item">{{ document.title }}</li>
       <li>{{ selectedCategory.category.name }}</li>
     </breadcrumbs-component>
+    <div class="set-12 txt-left" style="margin-bottom: 10px;">
+      <span class="created-by">
+        Autor:
+        <span class="author"
+          >{{ selectedCategory.createdBy.firstname }}
+          {{ selectedCategory.createdBy.lastname }}</span
+        >
+      </span>
+    </div>
     <div class="set-4 col-rgt-3">
       <mat-card class="doc-description">
         <div class="imghldr">
