--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -1,115 +1,132 @@
-<div class="container" *ngIf="solution">
-  <div class="set-12">
-    <div class="set-7">
-      <breadcrumbs-component>
-        <li class="breadcrumb-item">{{ document.title }}</li>
-        <li class="breadcrumb-item">{{ category.category.name }}</li>
-        <li class="breadcrumb-item">{{ subcategory.category.name }}</li>
-        <li class="breadcrumb-item">{{ topic.title }}</li>
+<div class="set-12 loading" *ngIf="!isDataAvailable">
+  <mat-spinner></mat-spinner>
+</div>
 
-        <li>{{ solution.title }}</li>
-      </breadcrumbs-component>
-    </div>
-    <div class="set-3 featured-users">
-      <featured-users [inputAmount]="3"></featured-users>
-    </div>
-    <div class="set-2">
-      <div class="header-buttons">
-        <div class="button-box">
-          <button
-            type="button"
-            mat-mini-fab
-            color="warn"
-            class="add-button green"
-          >
-            <mat-icon>create_new_folder</mat-icon>
-          </button>
-          <p>Agregar Comentario</p>
-        </div>
+<div class="set-12" *ngIf="isDataAvailable">
+  <div class="container">
+    <div class="set-12">
+      <div class="set-7">
+        <breadcrumbs-component>
+          <li class="breadcrumb-item">{{ document.title }}</li>
+          <li class="breadcrumb-item">{{ category.category.name }}</li>
+          <li class="breadcrumb-item">{{ subcategory.category.name }}</li>
+          <li class="breadcrumb-item">{{ topic.title }}</li>
 
-        <div class="button-box">
-          <button
-            type="button"
-            mat-mini-fab
-            color="warn"
-            class="add-button purple"
-            (click)="openModalTestimony()"
-          >
-            <mat-icon style="color: white">create_new_folder</mat-icon>
-          </button>
-          <p>Agregar Testimonios</p>
+          <li>{{ solution.title }}</li>
+        </breadcrumbs-component>
+      </div>
+      <div class="set-3 featured-users">
+        <featured-users [inputAmount]="3"></featured-users>
+      </div>
+      <div class="set-2">
+        <div class="header-buttons">
+          <div class="button-box">
+            <button
+              type="button"
+              mat-mini-fab
+              color="warn"
+              class="add-button green"
+            >
+              <mat-icon>create_new_folder</mat-icon>
+            </button>
+            <p>Agregar Comentario</p>
+          </div>
+
+          <div class="button-box">
+            <button
+              type="button"
+              mat-mini-fab
+              color="warn"
+              class="add-button purple"
+              (click)="openModalTestimony()"
+            >
+              <mat-icon style="color: white">create_new_folder</mat-icon>
+            </button>
+            <p>Agregar Testimonios</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+    <div class="set-12 txt-left" style="margin-bottom: 10px">
+      <span class="created-by">
+        Autor:
+        <span class="author"
+          >{{ solution.createdBy.firstname }}
+          {{ solution.createdBy.lastname }}</span
+        >
+      </span>
+    </div>
+    <div class="set-12" style="padding-bottom: 100px">
+      <div class="set-8 col-rgt-3">
+        <div class="set-12 header-card">
+          <mat-card>
+            <!-- IMAGE -->
+            <div class="image-box">
+              <img
+                src="https://images.pexels.com/photos/1117452/pexels-photo-1117452.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                alt="doc-image"
+              />
 
-  <div class="set-12" style="padding-bottom: 100px">
-    <div class="set-8 col-rgt-3">
-      <div class="set-12 header-card">
-        <mat-card>
-          <!-- IMAGE -->
-          <div class="image-box">
-            <img
-              src="https://images.pexels.com/photos/1117452/pexels-photo-1117452.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt="doc-image"
-            />
-
-            <div class="info">
-              <button class="custom-circle">
-                <mat-icon>thumb_up</mat-icon>
-              </button>
-
-              <div class="actions">
-                <p>Relevancia ciudadana</p>
-                <p class="votes">
-                  {{ votes }}
-                </p>
-                <button
-                  *ngIf="userVoted"
-                  mat-raised-button
-                  color="primary"
-                  style="background-color: #d9d9d9"
-                  (click)="unVote()"
-                >
-                  Ya votaste
+              <div class="info">
+                <button class="custom-circle">
+                  <mat-icon>thumb_up</mat-icon>
                 </button>
-                <button
-                  *ngIf="!userVoted"
-                  mat-raised-button
-                  color="primary"
-                  style="background-color: primary"
-                  (click)="openModalVote()"
-                >
-                  Votar
-                </button>
+
+                <div class="actions">
+                  <p>Relevancia ciudadana</p>
+                  <p class="votes">
+                    {{ votes }}
+                  </p>
+                  <button
+                    *ngIf="userVoted"
+                    mat-raised-button
+                    color="primary"
+                    style="background-color: #d9d9d9"
+                    (click)="unVote()"
+                  >
+                    Ya votaste
+                  </button>
+                  <button
+                    *ngIf="!userVoted"
+                    mat-raised-button
+                    color="primary"
+                    style="background-color: primary"
+                    (click)="openModalVote()"
+                  >
+                    Votar
+                  </button>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- DATA -->
-          <div class="data-box">
-            <p class="title">{{ solution.title }}</p>
-            <expanded-text [text]="solution.description"> </expanded-text>
-          </div>
-        </mat-card>
-      </div>
-      <div class="set-12 mt-2">
-        <mat-card class="doc-description" style="height: 480px; padding: 30px">
-          <div class="set-12 mt-2">
-            <div class="set-6 col-rgt-2">
-              <spider-chart [withBorder]="false"></spider-chart>
+            <!-- DATA -->
+            <div class="data-box">
+              <p class="title">{{ solution.title }}</p>
+              <expanded-text [text]="solution.description"> </expanded-text>
             </div>
-            <div class="set-6 col-rgt-2">
-              <circle-chart></circle-chart>
+          </mat-card>
+        </div>
+        <div class="set-12 mt-2">
+          <mat-card
+            class="doc-description"
+            style="height: 480px; padding: 30px"
+          >
+            <div class="set-12 mt-2">
+              <div class="set-6 col-rgt-2">
+                <spider-chart [withBorder]="false"></spider-chart>
+              </div>
+              <div class="set-6 col-rgt-2">
+                <circle-chart></circle-chart>
+              </div>
+              <div class="set-6"></div>
             </div>
-            <div class="set-6"></div>
-          </div>
-        </mat-card>
+          </mat-card>
+        </div>
       </div>
-    </div>
-    <div class="set-4">
-      <public-documents-testimonials
-        [data]="solution.testimonials"
-      ></public-documents-testimonials>
+      <div class="set-4">
+        <public-documents-testimonials
+          [data]="solution.testimonials"
+        ></public-documents-testimonials>
+      </div>
     </div>
   </div>
 </div>
