(public) add comments

--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -38,6 +38,7 @@
               mat-mini-fab
               color="warn"
               class="add-button red"
+              (click)="openModalComment()"
             >
               <mat-icon>create_new_folder</mat-icon>
             </button>
