--- a/src/app/public-documents/solution/solution.component.html
+++ b/src/app/public-documents/solution/solution.component.html
@@ -26,6 +26,7 @@
               mat-mini-fab
               color="warn"
               class="add-button green"
+              (click)="openModalComment()"
             >
               <mat-icon>create_new_folder</mat-icon>
             </button>
