--- a/src/app/public-documents/components/circle-custom/circle-custom.component.html
+++ b/src/app/public-documents/components/circle-custom/circle-custom.component.html
@@ -3,7 +3,7 @@
   [ngStyle]="{
     width: data.size.box + 'px',
     height: data.size.box + 'px',
-    'margin-left': data.position.left + '%',
+    'margin-left': data.position.left + 'px',
     'margin-top': data.position.top + '%',
     'margin-right': data.position.right + 'px'
   }"
