--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <div class="set-12 mainhldr">
-  <div class="app-pagelet" [user]="user" *ngIf="isDataAvailable"></div>
+  <div
+    class="app-pagelet"
+    [user]="user"
+    [path]="path"
+    *ngIf="isDataAvailable"
+  ></div>
 
   <router-outlet></router-outlet>
   <!-- <div class="message-box" [user]="user" *ngIf="isDataAvailable"></div> -->
