--- a/src/app/public-documents/category/category.component.scss
+++ b/src/app/public-documents/category/category.component.scss
@@ -17,13 +17,15 @@
   }
 
   .imghldr {
-    // min-height: 150px;
+    min-height: 250px;
+    max-height: 250px;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     background: rgba($color: #ceddff, $alpha: 0.4);
     border-bottom: 1px solid rgba($color: #000000, $alpha: 0.05);
-
+    
     mat-icon {
       font-size: 70pt;
       color: rgba($color: #000000, $alpha: 0.1);
@@ -39,9 +41,9 @@
     font-size: 20px;
     text-transform: uppercase;
     color: #000000;
-    margin-bottom: 10px;
     letter-spacing: 1px;
     margin-top: 15px;
+    margin-bottom: 20px;
   }
 
   .card-description {
@@ -58,10 +60,4 @@
       cursor: pointer;
     }
   }
-}
-
-
-.imgCategory{
-height: 208px;
-width: 100%;
 }
