--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -2,9 +2,40 @@
   <div class="set-12">
     <div class="set-6">
       <breadcrumbs-component>
-        <li class="breadcrumb-item">{{ document.title }}</li>
-        <li class="breadcrumb-item">{{ category.category.name }}</li>
-        <li class="breadcrumb-item">{{ subcategory.category.name }}</li>
+        <li>Documentos</li>
+        <li
+          (click)="
+            utilityService.linkMe('/documentos-publicos/' + document._id)
+          "
+        >
+          {{ document.title }}
+        </li>
+        <li
+          (click)="
+            utilityService.linkMe(
+              '/documentos-publicos/' +
+                document._id +
+                '/categoria/' +
+                category._id
+            )
+          "
+        >
+          {{ category.category.name }}
+        </li>
+        <li
+          (click)="
+            utilityService.linkMe(
+              '/documentos-publicos/' +
+                document._id +
+                '/categoria/' +
+                category._id +
+                '/subcategoria/' +
+                subcategory._id
+            )
+          "
+        >
+          {{ subcategory.category.name }}
+        </li>
         <li>{{ topic.title }}</li>
       </breadcrumbs-component>
     </div>
@@ -60,10 +91,7 @@
         <mat-card>
           <!-- IMAGE -->
           <div class="image-box">
-            <img class="imgTopic"
-            [src]="image"
-            alt=""
-          />
+            <img class="imgTopic" [src]="image" alt="" />
             <div class="info">
               <button class="custom-circle">
                 <mat-icon>thumb_up</mat-icon>
