--- a/src/app/public-documents/components/testimonials/testimonials.component.html
+++ b/src/app/public-documents/components/testimonials/testimonials.component.html
@@ -8,7 +8,8 @@
     <mat-card class="testimonial-item" *ngFor="let testimonial of data">
       <!-- IMAGE -->
       <div class="leading">
-        <img class="image" [src]="testimonial.images[0]" />
+        <mat-icon *ngIf="!testimonial.images[0]">panorama</mat-icon>
+        <img *ngIf="testimonial.images[0]" [src]="testimonial.images[0]" />
       </div>
       <!-- CONTENT -->
       <div class="info">
@@ -18,9 +19,12 @@
         <div class="about">
           <!-- AVATAR -->
 
-          <img class="avatar" src="https://images.pexels.com/photos/2726111/pexels-photo-2726111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"  />
+          <img
+            class="avatar"
+            src="https://images.pexels.com/photos/2726111/pexels-photo-2726111.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          />
 
-          <p>Fecha de creación: {{  testimonial.createdAt | date}}</p>
+          <p>Fecha de creación: {{ testimonial.createdAt | date }}</p>
         </div>
       </div>
     </mat-card>
