--- a/src/app/components/add-document-testimony/add-document-testimony.component.html
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.html
@@ -51,7 +51,10 @@
         />
       </div>
     </div>
-
+    <div class="messageError">
+      <span *ngIf="messageError" class="messageError">Titulo y descripción son requeridos.</span>
+    </div>
+    
     <div class="set-12 ctrls">
       <button
         type="submit"
