--- a/src/app/components/add-document-testimony/add-document-testimony.component.scss
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.scss
@@ -82,3 +82,14 @@
     }
   }
   
+
+  .messageError{
+
+    color: red;
+    margin-right: 20%;
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: -34px;
+  }
