--- a/src/app/public-documents/components/modal-permissions/modal-permissions.component.scss
+++ b/src/app/public-documents/components/modal-permissions/modal-permissions.component.scss
@@ -143,3 +143,14 @@ img {
   background-color: #306EFF !important;
   color: #ffffff !important;
 }
+
+.messageError{
+
+  color: red;
+  margin-right: 20%;
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin-bottom: -19px;
+  margin-top: 18px;
+}
