(public) guard para visitas, agregar contadores de interacciones y usuarios

--- a/src/app/public-documents/category/category.component.html
+++ b/src/app/public-documents/category/category.component.html
@@ -44,7 +44,7 @@
             ></expanded-text>
           </div>
         </mat-card>
-        <div class="set-12 horizontal-stats mt-2"></div>
+        <horizontal-stats [data]="selectedCategory.stats"></horizontal-stats>
       </div>
       <div class="set-9 col-rgt">
         <panel-circles
@@ -64,7 +64,7 @@
         </div>
         <div class="set-12 mt-2">
           <div class="set-3 col-rgt-2">
-            <vertical-stats></vertical-stats>
+            <vertical-stats [data]="selectedCategory.stats"></vertical-stats>
           </div>
           <div class="set-5 col-rgt-2">
             <spider-chart></spider-chart>
