--- a/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
+++ b/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
@@ -2,12 +2,12 @@
   <div class="set-12">
     <div class="set-6">
       <div class="set-12">
-        <div class="set-4 image-box gray-icon-color" style="margin-left: 15px;">
+        <div class="set-4 image-box gray-icon-color" style="margin-left: 15px">
           <img src="../../../assets/images/avatar.svg" alt="" />
         </div>
         <div class="set-7 texts-box">
           <p class="name">Usuarios</p>
-          <p class="amount">{{ usersTotal }}</p>
+          <p class="amount">{{ data.users }}</p>
         </div>
       </div>
     </div>
@@ -16,9 +16,9 @@
         <div class="set-4 image-box red-icon-color">
           <img src="../../../assets/images/hand.svg" alt="" width="42" />
         </div>
-    <div class="set-7 texts-box" style="margin-left: 15px;">
+        <div class="set-7 texts-box" style="margin-left: 15px">
           <p class="name">Interacciones</p>
-          <p class="amount">{{ interactionsTotal }}</p>
+          <p class="amount">{{ data.interactions }}</p>
         </div>
       </div>
     </div>
