--- a/src/app/public-documents/components/solutions-card/solutions-card.component.html
+++ b/src/app/public-documents/components/solutions-card/solutions-card.component.html
@@ -1,11 +1,7 @@
 <mat-card class="doc-description" style="min-height: 280px">
   <div class="solutions-box" style="text-align: start">
     <p class="title">Soluciones</p>
-    <p
-      class="txt-right title-column"
-    >
-    Calificación
-    </p>
+    <p class="txt-right title-column">Calificación</p>
     <table class="mt-2">
       <tbody>
         <tr
@@ -17,7 +13,7 @@
             <p>{{ item.title }}</p>
           </td>
           <td style="width: 300px">
-            <p class="txt-center">{{ 0 }}</p>
+            <p class="txt-center">{{ item.stats.interactions }}</p>
           </td>
         </tr>
       </tbody>
