--- a/src/app/public-documents/components/vertical-stats/vertical-stats.component.html
+++ b/src/app/public-documents/components/vertical-stats/vertical-stats.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="texts-box">
         <p class="name">Soluciones</p>
-        <p class="amount">{{ solutionsTotal }}</p>
+        <p class="amount">{{ data.solutions ||300}}</p>
       </div>
     </div>
   </mat-list-item>
@@ -17,7 +17,7 @@
       </div>
       <div class="texts-box">
         <p class="name">Problemáticas</p>
-        <p class="amount">{{ problemsTotal }}</p>
+        <p class="amount">{{ data.topics ||433 }}</p>
       </div>
     </div>
   </mat-list-item>
