--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -92,13 +92,15 @@
               <ng-container matColumnDef="ranking">
                 <th mat-header-cell *matHeaderCellDef>Ranking</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ 0 }}
+                  {{ element.stats.interactions }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="users">
                 <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-                <td mat-cell *matCellDef="let element">{{ 0 }}</td>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.stats.users }}
+                </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -125,13 +127,15 @@
               <ng-container matColumnDef="ranking">
                 <th mat-header-cell *matHeaderCellDef>Ranking</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ 0 }}
+                  {{ element.stats.interactions }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="users">
                 <th mat-header-cell *matHeaderCellDef>Usuarios</th>
-                <td mat-cell *matCellDef="let element">{{ 0 }}</td>
+                <td mat-cell *matCellDef="let element">
+                  {{ element.stats.users }}
+                </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
