fix panel subcategorias

--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -56,7 +56,7 @@
       </div>
       <div class="set-9 col-rgt">
         <panel-subcategory
-          [data]="subcategory.topics"
+          [data]="panelTopicsData"
           [selectedID]="subcategory._id"
         ></panel-subcategory>
         <div class="set-12 container-titles">
