cards de contadores

--- a/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.scss
+++ b/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.scss
@@ -11,6 +11,7 @@
     height: 45px;
     padding: 10px;
     border-radius: 100%;
+    margin-left: 40%;
     img {
       width: 22.5px;
       height: 22.5px;
@@ -20,6 +21,8 @@
   .texts-box {
     text-align: start;
     margin-left: 10px;
+    margin: 10px 0px;
+    text-align: center;
     .name {
       font-size: 14px;
       font-weight: 400;
