--- a/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
+++ b/src/app/public-documents/components/horizontal-stats/horizontal-stats.component.html
@@ -1,11 +1,15 @@
 <mat-card class="card-container">
   <div class="set-12">
-    <div class="set-6">
+    <div class="set-5">
       <div class="set-12">
-        <div class="set-4 image-box gray-icon-color" style="margin-left: 15px">
-          <img src="../../../assets/images/avatar.svg" alt="" />
+        <div class="set-4 image-box gray-icon-color" style="margin-left: 40%" >
+          <img
+            src="../../../assets/images/avatar.svg"
+            alt=""
+
+          />
         </div>
-        <div class="set-7 texts-box">
+        <div class="set-12 texts-box">
           <p class="name">Usuarios</p>
           <p class="amount">{{ data.users }}</p>
         </div>
@@ -13,10 +17,13 @@
     </div>
     <div class="set-6">
       <div class="set-12">
-        <div class="set-4 image-box red-icon-color">
+        <div class="set-12 image-box red-icon-color">
           <img src="../../../assets/images/hand.svg" alt="" width="42" />
         </div>
-        <div class="set-7 texts-box" style="margin-left: 15px">
+        <div
+          class="set-12 texts-box"
+          style="margin-left: 15px; text-align: center"
+        >
           <p class="name">Interacciones</p>
           <p class="amount">{{ data.interactions }}</p>
         </div>
